kafka spring boot demo

--- a/SpringKafka/src/main/resources/application.properties
+++ b/SpringKafka/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.kafka.bootstrap-servers=kafka:9092
 
 spring.kafka.consumer.group-id=grupo-hello
 spring.kafka.consumer.auto-offset-reset=earliest
+
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 
@@ -21,5 +22,6 @@ spring.kafka.consumer.properties.spring.json.trusted.packages=com.example.spring
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
-#logger level
-logging.level.org.springframework.kafka=DEBUG
+logging.level.org.springframework.kafka=off
+
+logging.level.root=info
