--- a/task-02/docker-compose.yml
+++ b/task-02/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/productos_db
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=postgres
+      - SERVER_PORT=8080
     ports:
       - "8080:8080"
     networks:
@@ -47,29 +48,10 @@ services:
       timeout: 5s
       retries: 5
 
-  # Servicio PgAdmin para administrar la base de datos (opcional)
-  pgadmin:
-    image: dpage/pgadmin4
-    container_name: pgadmin
-    environment:
-      - PGADMIN_DEFAULT_EMAIL=admin@example.com
-      - PGADMIN_DEFAULT_PASSWORD=admin
-    ports:
-      - "5050:80"
-    depends_on:
-      - postgres
-    networks:
-      - productos-network
-    volumes:
-      - pgadmin-data:/var/lib/pgadmin
-    # Reiniciar el contenedor si falla
-    restart: always
 
 # Volúmenes para persistir datos
 volumes:
   postgres-data:
-    driver: local
-  pgadmin-data:
     driver: local
 
 # Red para comunicación entre servicios
