--- a/licenses/src/main/resources/application.properties
+++ b/licenses/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=licenses
+
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/licenses
+spring.datasource.username=user
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.hikari.connection-timeout=30000
