--- a/licenses/docker-compose.yml
+++ b/licenses/docker-compose.yml
@@ -11,6 +11,24 @@ services:
       - "5432:5432"
     volumes:
       - licenses_data:/var/lib/postgresql/data
+      - ./data:/docker-entrypoint-initdb.d:ro
+
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db
+    environment:
+      SERVER_PORT: 8080
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/licenses
+      SPRING_DATASOURCE_USERNAME: user
+      SPRING_DATASOURCE_PASSWORD: password
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+      SPRING_JPA_SHOW_SQL: true
+
 
 volumes:
   licenses_data:
