--- a/agro/src/main/resources/application.properties
+++ b/agro/src/main/resources/application.properties
@@ -8,3 +8,22 @@ spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.hikari.connection-timeout=30000
+
+# RabbitMQ Configuration
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.connection-timeout=10000
+spring.rabbitmq.template.retry.enabled=true
+spring.rabbitmq.template.retry.initial-interval=1000
+spring.rabbitmq.template.retry.max-attempts=3
+spring.rabbitmq.template.retry.multiplier=1.0
+
+# RabbitMQ Exchange and Queue Configuration
+app.rabbitmq.exchange=agro.notification.exchange
+app.rabbitmq.queue=agro.notification.queue
+app.rabbitmq.routingkey=agro.notification.routing.key
+
+# Added missing property that VisitMessageConsumer is looking for
+rabbitmq.queue.notification.name=${app.rabbitmq.queue}
